# gardenwatch

./: Cargo.toml  README.md  gardenwatch.data  test.seeds
src/: cli.rs  data.rs  help.rs  main.rs  restrequest  seed.rs  server.rs
tests/: cli.rs
