[package]
name = "gardenwatch"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
itertools = "0.14.0"
native_db = "0.8.2"
native_model = "0.4.20"
once_cell = "1.21.3"
serde = "1.0.219"
inquire = { version = "0.7.5", features = ["date"] }
rand = "0.9.2"
strum = { version = "0.27.2", features = ["derive"] }


[dev-dependencies]
assert_cmd = "2.0.13"
pretty_assertions = "1.4.0"
