[package]
name = "gardenwatch"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
serde_json = "1.0.145"
inquire = "0.9.1"
actix-web = "4.12.1"
env_logger = "0.11.8"
actix-rt = "2.11.0"
futures = "0.3.31"


[dev-dependencies]
assert_cmd = "2.0.13"
pretty_assertions = "1.4.0"
